43: Convert internal DTOs to record data types